[package]
name = "Crest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
flume = "0.11.1"
futures = "0.3.31"
indicatif = "0.17.9"
ndarray = "0.16.1"
rayon = "1.10.0"
tokio = { version = "1.42.0", features = ["full"] }