[package]
name = "Crest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33.2"
rand = "0.9.1"
csv = "1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
itertools = "0.14"
tqdm = "0.7"
rand_distr = "0.5.1"
ordered-float = "5.0.0"
indicatif = "0.17.11"
